deploy/kustomize/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appbi-workflow-frontend
  namespace: appbi-workflow
  labels:
    app.kubernetes.io/name: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
